# yarrow

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE.md  README.md  YARROW_SPEC.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: CNAME  README.md  guide.css  index.html  learn.html  lightbox.js  style.css  theme-toggle.js  user-guide.html
docs/connect/: README.md  connect.css  index.html
public/: fouc.js
scripts/: first-time-setup.sh  make-sample-workspace.sh  release.sh
src/: App.svelte  App.tsx  index.css  main.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  attachments.rs  bibliography.rs  bibtex_import.rs  commands.rs  crypto.rs  drafts.rs  error.rs  export.rs  find_replace.rs  foreign_import.rs  fuzzy.rs  git.rs  glossary.rs  graph.rs  lib.rs  main.rs  notes.rs  obsidian_import.rs  path_collections.rs  path_content.rs  path_meta.rs  recipe_clip.rs  sample_vault.rs  search.rs  search_index.rs  secrets.rs  server.rs  server_crypto.rs  shopping_list.rs  templates.rs  trash.rs  updates.rs  welcome.rs  workspace.rs  ws_client.rs
src/components/: ActivityHeatmap.svelte  ActivityHeatmap.tsx  AppShell.svelte  AppShell.tsx  CalloutInsertModal.svelte  CalloutInsertModal.tsx  CommandPalette.svelte  CommandPalette.tsx  CompareDiff.svelte  CompareDiff.tsx  ConflictResolver.svelte  ConflictResolver.tsx  CustomTemplatesModal.svelte  CustomTemplatesModal.tsx  DecisionMatrix.svelte  DecisionMatrix.tsx  EmptyState.svelte  EmptyState.tsx  ExternalUrlFallbackModal.svelte  ExternalUrlFallbackModal.tsx  FindReplace.svelte  FindReplace.tsx  ForkMoment.svelte  ForkMoment.tsx  InlineDiffPane.svelte  InlineDiffPane.tsx  IntroPage.svelte  JournalKits.svelte  JournalKits.tsx  Kbd.svelte  Logo.tsx  MainNotePrompt.svelte  MainNotePrompt.tsx  Modal.svelte  Modal.tsx  ModePickerOnboarding.svelte  NewWorkspaceWizard.svelte  NewWorkspaceWizard.tsx  ObsidianImport.svelte  ObsidianImport.tsx  (+53 more)
src/components/Editor/: AnnotationsGutter.svelte  AnnotationsGutter.tsx  DraftTabStrip.svelte  FloatingDirectionCTA.tsx  ForkSuggestion.svelte  ForkSuggestion.tsx  HistorySlider.svelte  HistorySlider.tsx  LinearContextMenu.svelte  LinearContextMenu.tsx  NoteEditor.svelte  NoteEditor.tsx  NoteReader.svelte  NoteReader.tsx  RadialIcon.svelte  RadialMenu.svelte  RadialMenu.tsx  SelectionToolbar.svelte  TagBouquet.svelte  TagBouquet.tsx  TagChips.svelte  TagChips.tsx  Toolbar.svelte  Toolbar.tsx  radialItems.ts  radialItems.tsx
src/components/Editor/center/: ConstellationModal.svelte  ConstellationModal.tsx  FormatModal.svelte  FormatModal.tsx  InsertsModal.svelte  InsertsModal.tsx  QuickHandModal.svelte  QuickHandModal.tsx  TimerPickerModal.svelte  TimerPickerModal.tsx  actions.ts
src/components/Editor/extensions/: callouts.ts  citeAutocomplete.ts  codeHighlight.ts  glossaryHighlight.ts  imagePreview.ts  math.ts  phiHighlight.ts  selectionToolbar.ts  slashCommands.ts  spell.ts  wikilinkAutocomplete.ts
src/components/Guidance/: GuidanceHost.svelte  GuidanceHost.tsx  PathRibbon.svelte  PathRibbon.tsx  TeachingModal.svelte  TeachingModal.tsx
src/components/Guidance/illustrations/: CompareIllustration.svelte  CompareIllustration.tsx  PathCreateIllustration.svelte  PathCreateIllustration.tsx  PathStepIntoIllustration.svelte  PathStepIntoIllustration.tsx  WikilinkIllustration.svelte  WikilinkIllustration.tsx
src/components/LeftSidebar/: ActivityMini.svelte  ActivityMini.tsx  JournalCalendar.svelte  JournalCalendar.tsx  JournalList.svelte  JournalList.tsx  NoteList.svelte  NoteList.tsx  PathGraph.tsx  PathMinimap.svelte  PathMinimap.tsx  TagList.svelte  TagList.tsx
src/components/Paths/: ConditionEditor.svelte  ConditionEditor.tsx  ForkingRoad.svelte  ForkingRoad.tsx  PathDetail.svelte  PathDetail.tsx  PathPeek.svelte  PathsEmptyState.svelte  PathsEmptyState.tsx  ScenarioCards.svelte
src/components/RightSidebar/: ConnectionGraph.svelte  ConnectionGraph.tsx  LinkedNotesList.svelte  LinkedNotesList.tsx  OpenQuestions.svelte  OpenQuestions.tsx  Outline.svelte  Outline.tsx  SigmaForceGraph.svelte  Transclusions.svelte  Transclusions.tsx
src/lib/: accessibilityPrefs.svelte.ts  anim.svelte.ts  appearance.svelte.ts  appearance.ts  editorPrefs.svelte.ts  editorPrefs.ts  extraPrefs.svelte.ts  extraPrefs.ts  forkDetection.ts  format.ts  gesturePrefs.svelte.ts  gesturePrefs.ts  guidance.ts  guidanceStore.svelte.ts  guidanceStore.tsx  icons.tsx  iconsSvelte.ts  language.svelte.ts  language.ts  leftOff.ts  lineDiff.ts  listModePrefs.svelte.ts  listModePrefs.ts  macViewportFudge.svelte.ts  macViewportFudge.ts  mode.svelte.ts  modes.ts  notePrefetch.ts  openExternal.ts  packs.ts  paperPrefs.svelte.ts  paperPrefs.ts  pathAwareness.ts  personaGroups.ts  personalityPrefs.svelte.ts  personalityPrefs.ts  phiScan.ts  platform.svelte.ts  platform.ts  prefetch.ts  (+17 more)
src/lib/i18n/: index.svelte.ts  index.ts
src/lib/i18n/strings/: appearance.ts  appshell.ts  common.ts  editor.ts  modals.ts  onboarding.ts  paths.ts  settings.ts  sidebar.ts  wizard.ts
src/lib/transport/: index.ts  tauri.ts  types.ts
src/plugins/clinician/: FollowUpsModal.svelte  Rail.svelte  SensitiveModal.svelte  SessionKitModal.svelte  StatusBarWidget.svelte  clinical.ts
src/plugins/cooking/: Rail.svelte  RecipesModal.svelte  StatusBarWidget.svelte  cooking.ts
src/plugins/developer/: DecisionLogModal.svelte  Rail.svelte  StatusBarWidget.svelte  adr.ts
src/plugins/researcher/: QuestionsModal.svelte  Rail.svelte  SourcesModal.svelte  StatusBarWidget.svelte  sources.ts
src/plugins/writer/: Rail.svelte  StatusBarWidget.svelte  StreakModal.svelte  streak.svelte.ts
